Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,9 +17,9 @@ variables:
 steps:
 - script: |
     docker build -t skill-tree-app:$(Build.BuildId) .
-    docker login -u $(ACRUsername) -p $(ACRPassword) myacr.azurecr.io
-    docker tag skill-tree-app:$(Build.BuildId) myacr.azurecr.io/skill-tree-app:$(Build.BuildId)
-    docker push myacr.azurecr.io/skill-tree-app:$(Build.BuildId)
+    docker login -u $(ACRUsername) -p $(ACRPassword) benchcontainerregistry.azurecr.io
+    docker tag skill-tree-app:$(Build.BuildId) benchcontainerregistry.azurecr.io/skill-tree-app:$(Build.BuildId)
+    docker push benchcontainerregistry.azurecr.io/skill-tree-app:$(Build.BuildId)
   displayName: 'Build and Push Docker Image'
 
 - task: NuGetCommand@2
